# house-management

./: .gitignore  API_DOCUMENTATION_GUIDE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  SESSION_NOTES.md  SESSION_SUMMARY.md  TODO.md  docker-compose.yml  i18n.toml  package-lock.json  plan-maintenanceVotingAttachments.prompt.md  plan-newsAnnouncementsBoard.prompt.md  rest-api.http
api/: Cargo.toml  Dockerfile
api/locales/cs/: common.ftl
api/locales/en/: common.ftl
api/migrations/2025-06-24-122623_create_users_roles_user_roles/: down.sql  up.sql
api/migrations/2025-10-02-233500_create_buildings_apartments/: up.sql
api/migrations/2025-10-03-002100_create_apartment_owners/: down.sql  up.sql
api/migrations/2025-11-05-120000_add_soft_delete/: down.sql  up.sql
api/migrations/2025-11-15-130000_create_maintenance_requests/: down.sql  up.sql
api/migrations/2025-11-17-140000_add_assigned_to_to_maintenance_requests/: down.sql  up.sql
api/migrations/2025-11-17-141000_create_voting_tables/: down.sql  up.sql
api/migrations/2025-11-19-150000_create_announcements/: down.sql  up.sql
api/migrations/2025-12-17-130858_add_performance_indexes/: down.sql  up.sql
api/migrations/2026-01-14-101434_create_meters_tables/: down.sql  up.sql
api/migrations/2026-01-14-201416-0000_create_building_managers/: down.sql  up.sql
api/migrations/2026-01-14-201424-0000_create_apartment_renters/: down.sql  up.sql
api/migrations/2026-01-14-201424-0001_add_building_id_to_proposals/: down.sql  up.sql
api/migrations/2026-01-24-213750-0000_create_property_history/: down.sql  up.sql
api/migrations/2026-01-24-215855-0000_create_maintenance_request_comments/: down.sql  up.sql
api/migrations/2026-01-28-124131-0000_create_renter_invitations/: down.sql  up.sql
api/src/: auth.rs  config.rs  db.rs  i18n.rs  lib.rs  main.rs  models.rs  openapi.rs  pagination.rs  schema.rs
api/src/announcements/: comments.rs  handlers.rs  helpers.rs  mod.rs  types.rs
api/src/apartments/: handlers.rs  helpers.rs  invitations.rs  mod.rs  renters.rs  types.rs
api/src/auth/: building_access.rs  crypto.rs  error.rs  extractor.rs  handlers.rs  mod.rs  roles.rs  types.rs
api/src/buildings/: mod.rs
api/src/dashboard/: mod.rs
api/src/invitations/: mod.rs
api/src/maintenance/: attachments.rs  comments.rs  handlers.rs  mod.rs  types.rs
api/src/meters/: api_keys.rs  calibration.rs  handlers.rs  helpers.rs  mod.rs  readings.rs  types.rs  webhooks.rs
api/src/models/: announcements.rs  maintenance.rs  meters.rs  mod.rs  properties.rs  users.rs  voting.rs
api/src/users/: mod.rs
api/src/voting/: handlers.rs  mod.rs  types.rs
api/tests/: attachments_upload.rs  auth_tests.rs  buildings_apartments_tests.rs  maintenance_tests.rs  voting_tests.rs
api/tests/common/: mod.rs
frontend/: CLAUDE.md  Cargo.toml  Trunk.toml  i18n.toml  index.html  index.scss
frontend/locales/cs/: frontend.ftl
frontend/locales/en/: frontend.ftl
frontend/src/: app.rs  i18n.rs  lib.rs  main.rs  routes.rs
frontend/src/components/: admin_layout.rs  admin_sidebar.rs  announcement_editor.rs  announcement_editor_form.rs  announcement_list.rs  announcements.rs  app_layout.rs  auth_dropdown.rs  breadcrumb.rs  comment_list.rs  confirm_modal.rs  error_alert.rs  language_switcher.rs  main_sidebar.rs  mod.rs  navbar.rs  pagination.rs  search_input.rs  spinner.rs  toast.rs
frontend/src/components/announcements/: active_list.rs  deleted_list.rs  manage.rs  mod.rs
frontend/src/components/forms/: checkbox.rs  datetime_input.rs  form_group.rs  mod.rs  number_input.rs  select.rs  text_input.rs  textarea.rs
frontend/src/components/maintenance/: attachments_list.rs  mod.rs  (+5 more)
frontend/src/contexts/: auth.rs  language.rs  mod.rs
frontend/src/pages/: admin.rs  admin_announcements.rs  admin_properties.rs  building_apartments.rs  buildings.rs  health.rs  home.rs  login.rs  maint.rs  maintenance.rs  manage.rs  mod.rs  my_properties.rs  my_property_detail.rs
frontend/src/services/: api.rs  mod.rs
frontend/src/utils/: api.rs  auth.rs  datetime.rs
frontend/tests/: jwt_decode.rs
(+48 files in other folders)
