[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15"
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel_migrations = "2"
chrono = { version = "^0.4", features = ["serde"] }
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = "0.9"
once_cell = "1.18"
bigdecimal = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
thiserror = "1"
