[package]
name = "api"
version = "0.1.0"
edition = "2024"
default-run = "api"

[lib]
name = "api"
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
diesel = { version = "2", features = ["mysql", "r2d2", "chrono", "numeric"] }
dotenvy = "0.15"
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel_migrations = "2"
chrono = { version = "^0.4", features = ["serde"] }
fluent = "0.16"
fluent-langneg = "0.13"
unic-langid = "0.9"
once_cell = "1.18"
bigdecimal = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
infer = "0.15"
futures-util = "0.3"
pulldown-cmark = "0.13"
ammonia = "4"
utoipa = { version = "5", features = ["actix_extras", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "8", features = ["actix-web"] }
actix-governor = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
