[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version="0.21", features=["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["Navigator", "Window", "HtmlSelectElement", "HtmlDocument", "HtmlHtmlElement", "Location", "console", "HtmlTextAreaElement", "HtmlInputElement", "File", "FileList", "FormData", "Blob"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
fluent-bundle = "0.15"
unic-langid = "0.9"
once_cell = "1.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwasm = "0.5"
wasm-bindgen-futures = "0.4"
base64 = "0.22"
pulldown-cmark = "0.10"
ammonia = "3"
html-escape = "0.2"
gloo-timers = "0.3"

[lib]
name = "frontend"
path = "src/lib.rs"
